--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,5 +61,22 @@
   <div id="footer">
   	<p id="legal">( c ) 2009. All Rights Reserved. <a href="{{ site.blog }}">Zachery Hostens</a> designed by <a href="http://www.freecsstemplates.org/">Free CSS Templates</a>.</p>
   </div>
+
+  <!-- start disqus -->
+  <script type="text/javascript">
+    //<![CDATA[
+    (function() {
+      var links = document.getElementsByTagName('a');
+      var query = '?';
+      for(var i = 0; i < links.length; i++) {
+        if(links[i].href.indexOf('#disqus_thread') >= 0) {
+          query += 'url' + i + '=' + encodeURIComponent(links[i].href) + '&';
+        }
+      }
+      document.write('<script charset="utf-8" type="text/javascript" src="http://disqus.com/forums/zacheryph/get_num_replies.js' + query + '"></' + 'script>');
+    })();
+    //]]>
+  </script>
+  <!-- end disqus -->
 </body>
 </html>
