--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: default
     {{ content }}
   </div>
   <div class="meta">
-    <div class="byline">Posted on {{ page.date | date: '%A, %B d, %Y' }}</div>
+    <div class="byline">Posted on {{ page.date | date: '%A, %B %d, %Y' }}</div>
     <div class="links">&raquo;&nbsp;&nbsp; <a href="{{ post.url }}#disqus_thread">Comments</a></div>
   </div>
 </div>
