--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div class="post">
-  <h1 class="title">{{ page.title }}</a></h1>
+  <h1 class="title">{{ page.title }}</h1>
   <div class="entry">
     {{ content }}
   </div>
